--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "isomorphic-fetch": "^2.2.1",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
+    "postcss-assets": "^4.1.0",
     "pure-render-decorator": "^1.2.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
