--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
         "jsx-a11y/no-static-element-interactions": 0,
         "react/no-array-index-key": 0,
         "jsx-a11y/no-noninteractive-element-interactions": 0,
-        "max-len": 0
+        "max-len": 0,
+        "react/jsx-tag-spacing": 0
     }
 }
