增加登录注册页面

--- a/.eslintrc
+++ b/.eslintrc
@@ -41,6 +41,7 @@
         "react/no-array-index-key": 0,
         "jsx-a11y/no-noninteractive-element-interactions": 0,
         "max-len": 0,
-        "react/jsx-tag-spacing": 0
+        "react/jsx-tag-spacing": 0,
+        "guard-for-in": 0
     }
 }
