--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
         "jsx-a11y/no-noninteractive-element-interactions": 0,
         "max-len": 0,
         "react/jsx-tag-spacing": 0,
-        "guard-for-in": 0
+        "guard-for-in": 0,
+        "no-console": 0
     }
 }
