--- a/.eslintrc
+++ b/.eslintrc
@@ -43,6 +43,8 @@
         "max-len": 0,
         "react/jsx-tag-spacing": 0,
         "guard-for-in": 0,
-        "no-console": 0
+        "no-console": 0,
+        "dangerouslySetInnerHTML": 0,
+        "react/no-did-mount-set-state": 0
     }
 }
